@@ -2,58 +2,52 @@ package virtualproxy;
 
 import java.awt.*;
 import java.net.*;
+import java.util.concurrent.atomic.AtomicReference;
+
 import javax.swing.*;
 
 class ImageProxy implements Icon {
-	ImageIcon imageIcon;
+	AtomicReference<ImageIcon> imageIcon = new AtomicReference<>();
 	final URL imageURL;
 	Thread retrievalThread;
 	boolean retrieving = false;
-     
-	public ImageProxy(URL url) { imageURL = url; }
-     
-	@Override
+
+	public ImageProxy(URL url) {
+		imageURL = url;
+	}
+
 	public int getIconWidth() {
 		if (imageIcon != null) {
-            return imageIcon.getIconWidth();
-        } else {
+			return imageIcon.get().getIconWidth();
+		} else {
 			return 800;
 		}
 	}
- 
-	@Override
+
 	public int getIconHeight() {
 		if (imageIcon != null) {
-            return imageIcon.getIconHeight();
-        } else {
+			return imageIcon.get().getIconHeight();
+		} else {
 			return 600;
 		}
 	}
-	
-	// synchronized void setImageIcon(ImageIcon imageIcon) {
-	// 	this.imageIcon = imageIcon;
-	// }
-     
-	@Override
-	public void paintIcon(final Component c, Graphics  g, int x,  int y) {
+
+	public void paintIcon(final Component c, Graphics g, int x, int y) {
 		if (imageIcon != null) {
-			imageIcon.paintIcon(c, g, x, y);
+			imageIcon.get().paintIcon(c, g, x, y);
 		} else {
-			g.drawString("Loading cd cover, please wait...", x+300, y+190);
+			g.drawString("Loading album cover, please wait...", x + 300, y + 190);
 			if (!retrieving) {
 				retrieving = true;
-				
-				retrievalThread = new Thread(() -> {
+
+				Thread.ofVirtual().start(() -> {
 					try {
-						imageIcon = new ImageIcon(imageURL, "CD Cover");
+						this.imageIcon.set(new ImageIcon(imageURL, "Album Cover"));
 						c.repaint();
 					} catch (Exception e) {
 						e.printStackTrace();
 					}
 				});
-				
-				retrievalThread.start();
-				
 			}
 		}
 	}
